# LLM-Evalutor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  cli.py  config.yaml  main.py  pyproject.toml  requirements.txt  sample_test_suite.json  setup.py
src/: __init__.py  cache.py  config.py  exceptions.py  llm_models.py  metrics.py  models.py  utils.py
tests/: test_framework.py
